# refactored-tribble

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: auth.rs  config.rs  error.rs  main.rs  models.rs  ratelimit.rs  state.rs  validation.rs
backend/src/routes/: auth.rs  certifications.rs  mod.rs  oidc.rs  reports.rs  sessions.rs  trainings.rs  users.rs
db/: init.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  format.ts  styles.css  types.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: Layout.tsx  StatusBadge.tsx
frontend/src/pages/: AdminPage.tsx  CertificationsPage.tsx  DashboardPage.tsx  LoginPage.tsx  SchedulePage.tsx  TrainingDetailPage.tsx  TrainingsPage.tsx
