[package]
name = "lms-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[[bin]]
name = "lms-backend"
path = "src/main.rs"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

argon2 = "0.5"
rand = "0.8"
time = "0.3"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
